--- a/examples/cerberus.ipynb
+++ b/examples/cerberus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "    'id': {'type': 'integer'},\n",
     "    'name': {'type': 'string', 'maxlength': 10},\n",
     "}\n",
-    "user = Validator(user_schema)"
+    "user = Validator(user_schema)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,19 +26,19 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "first_user = {'id': 123, 'name': 'Ivan'}\n",
-    "user.validate(first_user)"
+    "user.validate(first_user)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,16 +47,16 @@
        "{'test': ['unknown field']}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "second_user = first_user.copy()\n",
-    "second_user.update({'test':'test'})\n",
+    "second_user.update({'test': 'test'})\n",
     "user.validate(second_user)\n",
-    "user.errors"
+    "user.errors\n"
    ]
   }
  ],
@@ -76,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
